<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/layout_details"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trasselbackstudios.dexter.activities.DetailsActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:text="@string/pokemon_name"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:id="@+id/text_view_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_name"
        android:text="@string/pokemon_types" />

    <TextView
        android:id="@+id/text_view_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_name"
        android:layout_toEndOf="@+id/text_view_types"
        android:gravity="end"
        android:text="@string/pokemon_species" />

    <ImageView
        android:id="@+id/image_view_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_types"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/pokemon_image" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_pokemon"
        android:text="@string/pokemon_id"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_height_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_pokemon"
        android:layout_toEndOf="@+id/text_view_id"
        android:gravity="end"
        android:text="@string/pokemon_height_weight"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_view_id"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_view_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_marginBottom="10dp"
        android:text="@string/pokemon_desc" />

    <TextView
        android:id="@+id/text_view_evolutions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_desc"
        android:text="@string/pokemon_evolutions"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_view_evolutions"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator2"
        android:layout_centerHorizontal="true"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layout_evolutions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" />

    </HorizontalScrollView>

    <ProgressBar android:id="@+id/loading_spinner"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</RelativeLayout>
