<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trasselbackstudios.dexter.activities.TypeEffectivenessActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title_weakness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_weaknesses"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator_weakness"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_weakness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material" />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_normal"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator_normal"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material" />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title_resistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_resistance"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator_resistance"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_resistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material" />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title_immune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_immune"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator_immune"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_immune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material" />

        </ScrollView>

    </LinearLayout>
</LinearLayout>
